add CI pipeline

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,3 +14,6 @@ jobs:
           node-version: 20
       - run: npm install
       - run: npm run build
+
+      - name: Build Docker image
+        run: docker build -t signmaster-backend .
